--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.4.8",
-    "jade": "*",
+    "express": "~3.4.8",
+    "jade": "~1.1.5",
     "mongoose": "~3.8.6"
   }
 }
